Many small adjustments for package building and release.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,14 @@
 [project]
-name = "TauCeti"
+name = "tdp-TauCeti"
 version = "5.1.0"
-description = "Add your description here"
+description = "Presetmanagement and parameer manipulation in TouchDesigner."
 readme = "README.md"
+license-files = ["LICENSE"]
 requires-python = ">=3.11"
+authors = [
+    {name = "Wieland Hilker", email = "wieland@plusplus.one"},
+]
+keywords = ["TouchDesigner", "Parameter", "Tweener", "2023.12000"]
 dependencies = []
 
 
